--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <% if login?%>
+  <% if is_logged_in?%>
     <%= link_to 'Logout', logout_path, :method => :delete %>
   <% end %>
   
