--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<% if login? %>
+<% if is_logged_in? %>
   <%= "Welcome, #{current_user.username}"%>
 <% else %>
   <%= render "shared/login_form" %>
