implemented voting feature

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,8 @@
   <%= render "shared/user_signup_form" %>
 <% end %>
 
-<% @images.each do |i| %>
-  <%= link_to(image_tag(i.source_url), image_path(i.id)) %>
+<% @images.each do |image| %>
+  <%= render 'shared/vote', :obj => image %>
+  <%= link_to(image_tag(image.source_url), image_path(image.id)) %>
 <% end %>
 
