--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,4 +1,24 @@
-<%= form_tag('/login', :method => :post, :class => 'login-form') %>
-  <%= email_field_tag('login[email]', nil, placeholder: 'Email') %>
-  <%= password_field_tag('login[password]', nil, placeholder: 'Password') %>
-  <%= submit_tag('Login') %>
+<div class="lightbox" id="login-form">
+  <%= form_tag('/login', :method => :post, class: "form-horizontal") do %>
+
+    <div class="control-group">
+      <label class="control-label" for="inputEmail">Email</label>
+      <div class="controls">
+        <%= email_field_tag('login[email]', nil, placeholder: 'Email') %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputEmail">Password</label>
+      <div class="controls">
+        <%= password_field_tag('login[password]', nil, placeholder: 'Password') %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <div class="controls">
+        <%= submit_tag('Login') %>
+      </div>
+    </div>
+  <% end %>
+</div>
