--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4354,7 +4354,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-text {
   margin-bottom: 0;
   line-height: 40px;
-  color: #777777;
+  color: white;
 }
 
 .navbar-link {
@@ -4737,7 +4737,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .navbar-text {
-  color: #999999;
+  color: white;
 }
 
 .navbar-inverse .nav > li > a:focus,
