--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,10 @@
-<% if is_logged_in? %>
-  <%= "Welcome, #{current_user.username}"%>
-<% else %>
-  <%= render "shared/login_form" %>
-  <%= render "shared/user_signup_form" %>
-<% end %>
-
-<% @images.each do |image| %>
-  <%= render 'shared/vote', :obj => image %>
-  <%= link_to(image_tag(image.source_url), image_path(image.id)) %>
-<% end %>
-
+<div class="container">
+  <div class="row">
+    <% @images.each do |image| %>
+      <div class="span4 imagela">
+        <%= link_to(image_tag(image.source_url), image_path(image.id)) %>
+        <%= render 'shared/vote', :obj => image %>
+      </div>
+    <% end %>
+  </div>
+</div>
