--- a/app/views/shared/_main_menu.html.erb
+++ b/app/views/shared/_main_menu.html.erb
@@ -4,14 +4,21 @@
 
       <ul class='nav'>
         <li><%= link_to 'Home', root_path %></li>
-        <li><a href='#login' class='login-button'>Login</a></li>
-
         <% if is_logged_in?%>
           <li><%= link_to 'Logout', logout_path, :method => :delete %></li>
+        <% else %>
+          <li><a href='#login-form' class='auth-button'>Login</a></li>
+          <li><a href='#signup-form' class='auth-button'>Sign Up</a></li>
+        <% end %>
+      </ul>
+
+      <ul class='nav pull-right'>
+        <% if is_logged_in?%>
+          <li><p class="navbar-text"><%= "Welcome, #{current_user.username}"%></p></li>
         <% end %>
 
-
       </ul>
+
     </div>
   </div>
 </div>
