--- a/app/views/shared/_user_signup_form.html.erb
+++ b/app/views/shared/_user_signup_form.html.erb
@@ -1,9 +1,41 @@
-<%= form_for @user, :url => { :controller => 'users', :action => 'create'} do |f| %>
-  <%= render 'shared/error_messages', :object => f.object %>
-  <!-- <%= f.object %> -->
-  <%= f.text_field :username, :placeholder => 'User Name' %>
-  <%= f.text_field :email, :placeholder => 'Email' %>
-  <%= f.password_field :password, :placeholder => 'Password' %>
-  <%= f.password_field :password_confirmation, :placeholder => 'Password Confirmation' %>
-  <%= f.submit "Sign up" %>
-<% end %>
+<div class="lightbox" id="signup-form">
+  <%= form_for @user, :url => { :controller => 'users', :action => 'create'}, :html => { :class => "form-horizontal" } do |f| %>
+
+
+    <%= render 'shared/error_messages', :object => f.object %>
+
+    <div class="control-group">
+      <label class="control-label" for="inputEmail">Username</label>
+      <div class="controls">
+        <%= f.text_field :username, :placeholder => 'User Name' %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputEmail">Email</label>
+      <div class="controls">
+        <%= f.text_field :email, :placeholder => 'Email' %>
+      </div>
+    </div> 
+
+    <div class="control-group">
+      <label class="control-label" for="inputEmail">Password</label>
+      <div class="controls">
+        <%= f.password_field :password, :placeholder => 'Password' %>
+      </div>
+    </div> 
+
+    <div class="control-group">
+      <label class="control-label" for="inputEmail">Password Confirmation</label>
+      <div class="controls">
+        <%= f.password_field :password_confirmation, :placeholder => 'Password Confirmation' %>
+      </div>
+    </div> 
+    <div class="control-group">
+      <div class="controls">
+        <%= f.submit "Sign up", class: 'btn' %>
+      </div>
+    </div> 
+
+  <% end %>
+</div>
