additional UI on voting buttons

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,3 +35,15 @@
 a.vote-button{
   text-decoration: none;
 }
+
+a.disabled{
+  color: #95A5A6;
+}
+
+a.loved{
+  color:#E74C3C;
+}
+
+.fui-heart-24 {
+  font-size: 2em;
+}
