--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 
 
-  <div class="container-fluid body">
+  <div class="container body">
     <% if flash[:alert] %>
       <div class="alert">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
