add workers for instagram image pull

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,7 +15,7 @@
   form{
     top: 300px;
     margin: auto;
-    width: 25%;
+    width: 440px;
     background-color: #E67E22;
     padding: 30px;
     margin-top: 250px;
